syntax = "proto3";

option csharp_namespace = "AElf.Types.CSharp";

import "google/protobuf/any.proto";

message UserTypeHolder
{
    map<string, google.protobuf.Any> Fields = 1;
}
